--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,55 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+@layer base {
+  html,
+  body,
+  #__next {
+    height: 100%;
   }
-  body {
-    color: white;
-    background: black;
+
+  /* width */
+  ::-webkit-scrollbar {
+    width: 5px;
+    height: 5px;
+  }
+
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #666666;
+  }
+
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 10px;
+  }
+
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555;
+  }
+}
+
+@layer components {
+  .form-input {
+    @apply w-full rounded-2xl bg-customLight-50 dark:bg-customDark-50 border-customGray-100 py-3 px-4;
+  }
+
+  .form-label {
+    @apply block mb-2;
+  }
+
+  .my-masonry-grid {
+    @apply flex w-auto;
+  }
+
+  .my-masonry-grid_column {
+    @apply pl-3;
+  }
+
+  .my-masonry-grid_column > * {
+    @apply block mb-3;
   }
 }
